# MPPI-OpenCL

./: .gitignore  CMakeLists.txt  build.sh
include/mppi/: mppi.h
src/mppi/: mppi.cc  mppi.cl
test/: plot.py  test_circle.cpp
